logs/pyicl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyICL-0.6.15.egg-info'...
Listing './lib/python3.5/site-packages/cookbook'...
Compiling './lib/python3.5/site-packages/cookbook/cache_decorator.py'...
***   File "./lib/python3.5/site-packages/cookbook/cache_decorator.py", line 122
    raise NotImplementedError, "dict is immutable"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/const.py'...
***   File "./lib/python3.5/site-packages/cookbook/const.py", line 17
    raise self.ConstError, "Can't rebind const(%s)" % name
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/dicts.py'...
***   File "./lib/python3.5/site-packages/cookbook/dicts.py", line 105
    print 'Should be [1]:', lists[key]
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/enum.py'...
***   File "./lib/python3.5/site-packages/cookbook/enum.py", line 44
    print '\n*** Enum Demo ***'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/equivalence.py'...
***   File "./lib/python3.5/site-packages/cookbook/equivalence.py", line 73
    for c in classes: print c
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/lru_cache.py'...
***   File "./lib/python3.5/site-packages/cookbook/lru_cache.py", line 35
    print 'Could not load cache from "%s"' % cache_storage_file
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/named_tuple.py'...
***   File "./lib/python3.5/site-packages/cookbook/named_tuple.py", line 97
    print template
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/output_context.py'...
***   File "./lib/python3.5/site-packages/cookbook/output_context.py", line 92
    print square(9)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/persisted_cache.py'...
***   File "./lib/python3.5/site-packages/cookbook/persisted_cache.py", line 43
    print 'Unpickling: %s' % self.pickle_file
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/pytables_utils.py'...
***   File "./lib/python3.5/site-packages/cookbook/pytables_utils.py", line 139
    print row
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/rb_interval_tree.py'...
***   File "./lib/python3.5/site-packages/cookbook/rb_interval_tree.py", line 171
    print interval_tree.find_closest_intervals(Interval(3,30), max_distance=None)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/script_basics.py'...
***   File "./lib/python3.5/site-packages/cookbook/script_basics.py", line 75
    print '%s=%s' % (name, os.environ[name])
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cookbook/simple_logging.py'...
***   File "./lib/python3.5/site-packages/cookbook/simple_logging.py", line 142
    print 'Fn name: %s' % exception_raiser.__name__
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cookbook/venn.py'...
***   File "./lib/python3.5/site-packages/cookbook/venn.py", line 86
    print 'Union has %d entries' % len(union)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cookbook-2.2.25.egg-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyicl'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
